--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
   },
   "dependencies": {
     "@microsoft/clarity": "^1.0.0",
+    "@portabletext/react": "^3.2.1",
+    "@sanity/client": "^7.8.1",
+    "@sanity/image-url": "^1.1.0",
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "@tailwindcss/typography": "^0.5.16",
     "motion": "^12.19.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
